# xtensor-python-cookiecutter-v2

./: .appveyor.yml  .travis.yml  IDEAS.md  README.md  cookiecutter.json
{{cookiecutter.github_project_name}}/: CMakeLists.txt  setup.py
{{cookiecutter.github_project_name}}/include/{{cookiecutter.cpp_root_folder_name}}/: {{cookiecutter.package_name}}.hpp
{{cookiecutter.github_project_name}}/src/: CMakeLists.txt
{{cookiecutter.github_project_name}}/src/python/: CMakeLists.txt  README.md  main.cpp
{{cookiecutter.github_project_name}}/src/tests/: CMakeLists.txt
