#------------------------------------------------------------------------------------------------------------------
# test folder
#-------------------------------------------------------------------------------------------------------------------
if(BUILD_TESTS)
    add_subdirectory(tests)
endif(BUILD_TESTS)



#------------------------------------------------------------------------------------------------------------------
# python folder
#-------------------------------------------------------------------------------------------------------------------
if(BUILD_PYTHON)
    add_subdirectory(python)
endif(BUILD_PYTHON)
